# trousse

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  instructions.md  pyproject.toml
.arc/: items.jsonl  prefix
.beads/: issues.jsonl
.bon/: README.md  items.jsonl
.bon/handoffs/: 01d34cf9.md  2026-04-23-bd80b232.md  2026-04-24-994cabfe.md  2026-06-12-1236.md  2026-07-19-511191c5.md
.claude-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
commands/: consomme-dashboard.md  consomme-explore.md  consomme-ingest.md  consomme-profile.md  consomme-sheets.md  consomme-validate.md  consomme.md
docs/: error-patterns.md
gemini/: PLAN.md
hooks/: arc-tactical.sh  bon-tactical.sh  hooks.json  session-end.sh  session-start.sh
references/: ERROR_PATTERNS.md  HANDOFF-CONTRACT.md  HOOKS_AND_SCRIPTS.md
scripts/: arc-read.sh  ardoise.sh  auto-handoff.sh  bon-read.sh  bon-survey.py  check-symlinks.sh  claude-doctor.sh  close-context.sh  neutral-claude.sh  open-context.sh  repo-sync.sh  send-amp-extraction.sh  stage-extraction.sh  update-all.template.sh
skills/amp-close/: SKILL.md
skills/ardoise/: SKILL.md
skills/audit/: SKILL.md
skills/beads/: .gitignore  CLAUDE.md  SKILL.md
skills/claude-survey/: SKILL.md
skills/close/: SKILL.md
skills/consomme/: SKILL.md
skills/deglacer/: SKILL.md
skills/diagram/: .gitignore  README.md  SKILL.md
skills/filing/: README.md  SKILL.md
skills/github-cleanup/: .gitignore  CLAUDE.md  README.md  SKILL.md
skills/google-devdocs/: SKILL.md
skills/ground/: SKILL.md
skills/ia-presenter/: SKILL.md
skills/mandoline/: SKILL.md
skills/neutral-claude/: SKILL.md
skills/open/: SKILL.md
skills/peer-review/: SKILL.md
skills/picture/: .gitignore  README.md  SKILL.md
skills/scaffold/: SKILL.md
skills/screenshot/: README.md  SKILL.md
skills/server-checkup/: README.md  SKILL.md
skills/session-closing/: SKILL.md
skills/session-grounding/: SKILL.md
skills/session-opening/: SKILL.md
skills/setup/: SKILL.md
skills/skill-check/: README.md  SKILL.md  scan-config.json
skills/skill-forge/: SKILL.md
skills/snowflake-devdocs/: SKILL.md
skills/sprite/: SKILL.md  test-outer-inner.sh
tests/: test_arc_read.py  test_bon_read.py  test_handoff_parsing.py
(+77 files in other folders)
