[project]
name = "trousse"
dynamic = ["version"]
description = "Behavioral skills for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",  # parallel test execution
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = ".claude-plugin/plugin.json"
pattern = "\"version\":\\s*\"(?P<version>[^\"]+)\""

# Trousse is a pure skills/hooks/docs plugin — no Python packages to ship.
# package = false tells uv to install dependencies without building/installing
# this project itself. Without it, hatchling fails: "Unable to determine which
# files to ship" (no directory named 'trousse' exists).
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]
